List.of(Optional.empty()) --> Collections.emptyList()